test/valid/FieldIdEqClassId/FieldIdEqClassId.plume
/**
 * @author Diogo Marques, 30100
 */
class FieldIdEqClassId extends Object is

	field FieldIdEqClassId : Integer

	method override toString : () -> String is
		FieldIdEqClassId.toString()	
